--- a/css/style.css
+++ b/css/style.css
@@ -19,14 +19,18 @@ a {
 
 header {
     text-align: center;
-    font-size: medium;
+    font-size: 1.5rem;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 body {
     background-color: gray;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
+section p{
+    font-size: 1.2rem;
+}
 
 
 h1 {
@@ -34,27 +38,50 @@ h1 {
 }
 
 h4 {
-    font-size: 20px;
+    font-size: 0.8rem;
 }
 
 h5 {
-    font-size: 18px;
+    font-size: 0.7rem;
 }
 
 
 
 .containerPortada{
-    display: flex;
-    margin: 15px;
-    border: 4px solid #cad011;
-    border-radius: 10px;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 15px;
+    text-align: center;
 }
 
 .imgPortada{
     display: block;
     width: 200px;
 }
+
+.portada{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(217, 255, 0);
+    border: 2px solid #000000;
+    border-radius: 8px;
+    padding: 20px;
+    
+    
+
+}
+
+.portada button{
+    background-color: #5e5e5eb3;
+    color: #000000;
+    border: none;
+    padding: 10px 20px;
+    font-size: 1rem;
+    margin-top: 10px;
+}
+
 
 .card{
     width: 250px;
@@ -90,4 +117,41 @@ h5 {
  flex-wrap: wrap;
  justify-content: space-around;
  margin-top: 20px;  
+}
+
+@media (max-width:1024px) {
+    .containerPortada{
+        grid-template-columns: 1 fr 1fr;
+    }
+    
+    main{
+        p{
+            font-size: 1rem
+        }
+    }
+
+    footer{
+        p{
+            font-size: 0.8rem;
+        }
+    }
+    
+}
+
+@media (max-width:768px) {
+    .contenedorPortada {
+        grid-template-columns: 1fr;
+    }
+    main{
+        p{
+            font-size: 0.8rem
+        }
+    }
+
+    footer{
+        p{
+            font-size: 0.6rem;
+        }
+    }
+    
 }
