--- a/css/style.css
+++ b/css/style.css
@@ -16,11 +16,8 @@ a {
     text-transform: uppercase
 }
 
-
-header {
-    text-align: center;
-    font-size: 1.5rem;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+.bg-puma{
+    background-color: rgb(227, 247, 4);
 }
 
 body {
@@ -85,10 +82,11 @@ h5 {
 
 .card{
     width: 250px;
-    border: 1px solid yellow;
+    border: 1px solid rgb(0, 0, 0);
     border-radius: 6px;
     padding: 15px;
     margin: 15px;
+    background-color: rgb(217, 255, 0);
 }
 
 .card img{
@@ -106,7 +104,7 @@ h5 {
     color: black;
     display: inline-block;
     padding: 15px;
-    border: solid yellow 1px;
+    border: solid rgb(0, 0, 0) 1px;
     border-radius: 6px;
 
 }
