--- a/css/style.css
+++ b/css/style.css
@@ -46,14 +46,14 @@ h5 {
 
 .containerPortada{
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(auto-fill, minmax(10rem, 1fr));
     gap: 15px;
     text-align: center;
 }
 
 .imgPortada{
     display: block;
-    width: 200px;
+    width: 100%;
 }
 
 .portada{
