--- a/scss/components/_cards.scss
+++ b/scss/components/_cards.scss
@@ -4,7 +4,7 @@
     border-radius: 6px;
     padding: 15px;
     margin: 15px;
-    background-color: rgb(217, 255, 0);
+    background-color: $color-amarillo;
 
     img {
         width: 100%;
@@ -18,7 +18,7 @@
 
 .card-button {
     text-decoration: none;
-    color: black;
+    color: $color-negro;
     display: inline-block;
     padding: 15px;
     border: solid rgb(0, 0, 0) 1px;
