--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -1,6 +1,6 @@
 .logo {
     width: 200px;
     border: solid;
-    border-color: yellow;
+    border-color: $color-amarillo;
     border-radius: 4px;
 }
