--- a/scss/components/_cards.scss
+++ b/scss/components/_cards.scss
@@ -32,3 +32,11 @@
     justify-content: space-around;
     margin-top: 20px;
 }
+
+.nosotros {
+    text-align: center;
+}
+
+.textosab {
+    text-align: center;
+}
