--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -38,3 +38,25 @@ body {
     background-color: $color-gris;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
+
+.nosotros {
+    text-align: center;
+}
+
+.textosab {
+    text-align: center;
+}
+
+blockquote {
+            background-color: #f9f9f9;
+            border-left: 5px solid #333;
+            margin: 10px 0;
+            padding: 10px;
+            font-style: italic;
+            
+}
+
+.contacto {
+    text-align: center;
+    margin: 15px;
+}
