--- a/scss/components/_portada.scss
+++ b/scss/components/_portada.scss
@@ -26,7 +26,7 @@
         color: $color-negro;
         border: none;
         padding: 10px 20px;
-        font-size: 1rem;
+        font-size: map-get($font-sizes, m);
         margin-top: 10px;
     }
 }
