--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -2,3 +2,9 @@
     text-decoration: none;
     color: black;
 }
+
+a {
+    @include anclas;
+    font-weight: bolder;
+    text-transform: uppercase;
+}
